<resources>
    <string name="app_name">PruebaGitHub</string>

    <!--Pantalla Prueba BD-->
    <string name="titPantallaPruebaBD">Prueba BD</string>
    <string name="titPagina_1">Insertar</string>
    <string name="titPagina_2">Mostrar</string>
    <string name="titFragmentInsertar">Nuevo Registro</string>
    <string name="hintDni">Dni</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellidos">Apellidos</string>
    <string name="hintEdad">Edad</string>
    <string name="btnInsertarBD">Insertar Registro</string>
    <string name="titDialogEliminar">Eliminar Datos</string>
    <string name="txtDialogEliminar">¿Quieres eliminar las personas seleccionadas?</string>
    <string name="btnSi">Si</string>
    <string name="btnNo">No</string>
    <!--Fin Pantalla Prueba BD-->
    
    
    <!--Pantalla Prueba WS-->
    <string name="titFragmentMostrarUsuarios">Usuarios</string>
    <string name="titFragmentDetalleUsuario">Detalle Usuario</string>
    <string name="titNombre">titNombreUsuario</string>
    <string name="titNombreUsuario">Nombre</string>
    <string name="titApellidosUsuario">Apellidos</string>
    <string name="titGeneroUsuario">Genero</string>
    <string name="titEmailUsuario">Email</string>
    <string name="titCiudadUsuario">Ciudad</string>
    <string name="titPaisUsuario">Pais</string>
    <string name="btnConectar">Conectar</string>
    <string name="btnBorrar">Borrar</string>
    <!--Fin Pantalla Prueba WS-->


</resources>